--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,12 +45,16 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: bash -l {0}
         run: |
+          echo "cmd-1"
           export BUILD_FOLDER="%TEMP%\matchms\_build\"
-
+          echo "cmd-2"
           echo ${BUILD_FOLDER}
+          echo "cmd-3"
           echo file:\\${BUILD_FOLDER}\noarch\
+          echo "cmd-4"
           echo "file:\\${BUILD_FOLDER}\noarch\"
-
+          echo "cmd-5"
           ls -al "%TEMP%\matchms\_build"
+          echo "cmd-6"
           ls -al ${BUILD_FOLDER}
 
