--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,8 @@ jobs:
           echo %BUILD_FOLDER%
           echo "cmd-6"
           echo BUILD_FOLDER
+          echo "cmd-6"
+          echo $BUILD_FOLDER
 
       - name: List folders for Windows
         if: matrix.os == 'windows-latest'
