--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,7 +66,8 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: bash -l {0}
         run: |
+          export BUILD_FOLDER="%TEMP%\matchms\_build\"
           echo "cmd-1"
           ls -al "%TEMP%\matchms\_build"
           echo "cmd-2"
-          ls -al ${BUILD_FOLDER}
+          ls -al $BUILD_FOLDER
