--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,12 +62,18 @@ jobs:
           echo "cmd-8"
           echo file:\\$BUILD_FOLDER\noarch\
 
-      - name: List folders for Windows
+      - name: List folders for Windows-1
         if: matrix.os == 'windows-latest'
         shell: bash -l {0}
         run: |
           export BUILD_FOLDER="%TEMP%\matchms\_build\"
           echo "cmd-1"
           ls -al "%TEMP%\matchms\_build"
-          echo "cmd-2"
+
+      - name: List folders for Windows-2
+        if: matrix.os == 'windows-latest'
+        shell: bash -l {0}
+        run: |
+          export BUILD_FOLDER="%TEMP%\matchms\_build\"
+          echo "cmd-1"
           ls -al $BUILD_FOLDER
