--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,7 +62,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: bash -l {0}
         run: |
-          export BUILD_FOLDER="%TEMP%\matchms\_build\"
+          export BUILD_FOLDER="%TEMP%\\matchms\\_build\\"
           echo "cmd-7"
           echo $BUILD_FOLDER
 
@@ -70,7 +70,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: bash -l {0}
         run: |
-          export BUILD_FOLDER="%TEMP%\matchms\_build\"
+          export BUILD_FOLDER="%TEMP%\\matchms\\_build\\"
           echo "cmd-8"
           echo file:\\$BUILD_FOLDER\noarch\
 
@@ -78,7 +78,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: bash -l {0}
         run: |
-          export BUILD_FOLDER="%TEMP%\matchms\_build\"
+          export BUILD_FOLDER="%TEMP%\\matchms\\_build\\"
           echo "cmd-1"
           ls -al "%TEMP%\matchms\_build"
 
@@ -86,6 +86,6 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: bash -l {0}
         run: |
-          export BUILD_FOLDER="%TEMP%\matchms\_build\"
+          export BUILD_FOLDER="%TEMP%\\matchms\\_build\\"
           echo "cmd-1"
           ls -al $BUILD_FOLDER
